Fix exercises dropdown menu being cut off by series edit card

--- a/app/assets/stylesheets/series.css.less
+++ b/app/assets/stylesheets/series.css.less
@@ -186,6 +186,10 @@
     }
 }
 
+.card.series-edit {
+  overflow: visible;
+}
+
 .material-icons-alarm.md-12 {
   top: 2px;
 }
